using UnityEngine;

public class AnimStrings 
{
    public static string isMoving = "Move";
    public static string isJumping = "Jump";
    public static string isDoubleJump = "DoubleJump";
    public static string isDashing = "Dash";
    public static string isNormalAttack0 = "NormalAttack0";
    public static string isNormalAttack1 = "NormalAttack1";
    public static string isNormalAttack2 = "NormalAttack2";
    internal static string isSlideWall = "SlideWall";
    internal static string isDead = "Dead";
    internal static string isHit = "Hit";

}
